Fixed text overflowing on feed

--- a/api/public/js/blather/src/components/feed/v1/style.scss
+++ b/api/public/js/blather/src/components/feed/v1/style.scss
@@ -8,7 +8,7 @@
 
     .content .extra {
         &.text {
-            max-width: none !important;
+            max-width: 750px !important;
         }
 
         p {
